tests/machine/x/c/bool_chain.error
line: 0
error: output mismatch
-- got --
-815570935
-815570926
-815570926
-- want --
true
false
false
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
