tests/machine/x/c/bool_chain.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
#include <stdio.h>
#include <stdlib.h>

int boom() {
  printf("boom\n");
  return 1;
}

int main() {
  printf("%d\n", ((1 < 2) && (2 < 3) && (3 < 4)) ? "true" : "false");
  printf("%d\n", ((1 < 2) && (2 > 3) && boom()) ? "true" : "false");
  printf("%d\n", ((1 < 2) && (2 < 3) && (3 > 4) && boom()) ? "true" : "false");
  return 0;
}
